used a different solution to fix double borders

--- a/cv6/style_03.css
+++ b/cv6/style_03.css
@@ -21,15 +21,10 @@
 
 .box__item {
     padding: 1em;
-    border-width: 1px 0px 1px 1px;
-    border-style: solid;
-    border-color: black;
-}
-
-.box__item:last-child {
+    margin-left: -1px;
+    box-sizing: border-box;
     border: 1px solid black;
 }
-
 
 .box__item--special {
     background-color: #0066cc;
